忽略配置的内置CallAdapterFactory